Switchbox updates (Bug #1433776)
The switchbox styles needed to be updated so that
1. help icons appear to the right of the switchboxes
2. The two switchboxes on the account settings page
in the administration area are not too close to each
other when a user is a member in an institution.

--- a/htdocs/theme/raw/static/style/style.css
+++ b/htdocs/theme/raw/static/style/style.css
@@ -561,6 +561,9 @@ thead th {
 .autocomplete th {
     padding-top: 8px;
 }
+.switchbox th {
+    padding-top: 10px;
+}
 td {
     padding: 3px 5px;
     vertical-align: top;
